--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,10 @@ dependencies {
     compile(
             [group: 'com.airhacks', name: 'afterburner.fx', version: '1.6.2'],
             [group: 'javax.inject', name: 'javax.inject', version: '1'],
-            [group: 'org.xerial', name: 'sqlite-jdbc', version: '3.8.11.1'],
+
+            [group: 'com.orientechnologies', name:'orientdb-core', version:'2.1.6'],
+            [group: 'com.orientechnologies', name:'orientdb-object', version:'2.1.6'],
+
             [group: 'com.offbytwo', name: 'docopt', version: '0.6.0.20150202'],
             [group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'],
             [group: 'org.projectlombok', name: 'lombok', version: '1.16.6'],
