--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+
+# Database files
+database
