--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
             [group: 'com.offbytwo', name: 'docopt', version: '0.6.0.20150202'],
             [group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'],
             [group: 'org.projectlombok', name: 'lombok', version: '1.16.6'],
+
+            [group: 'org.controlsfx', name: 'controlsfx', version : '8.0.5']
     )
 
     testCompile(
@@ -49,7 +51,7 @@ sourceSets {
     }
 }
 
-mainClassName = 'com.urosjarc.headhunt.app.App'
+mainClassName = 'headhunt.wizard.Wizard'
 version = '1.0.0'
 
 /**
@@ -86,6 +88,6 @@ task fatJar(type: Jar) {
     manifest {
         attributes 'Implementation-Title': 'Headhunt application'
         attributes 'Implementation-Version': '0.0.1'
-        attributes 'Main-Class': 'com.urosjarc.headhunt.Main'
+        attributes 'Main-Class': 'headhunt.Main'
     }
 }
