--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,7 @@ dependencies {
             [group: 'com.offbytwo', name: 'docopt', version: '0.6.0.20150202'],
             [group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'],
             [group: 'org.projectlombok', name: 'lombok', version: '1.16.6'],
-
-            [group: 'org.controlsfx', name: 'controlsfx', version : '8.0.5']
+            [group: 'org.apache.commons', name: 'commons-io', version : '1.3.2']
     )
 
     testCompile(
