--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ hs_err_pid*
 .gradle
 build/
 
-# Ignore Gradle GUI config
+# Ignore Gradle GUI env
 gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
