--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,14 @@ buildscript {
     }
     dependencies {
         classpath 'org.flywaydb:flyway-gradle-plugin:3.2.1'
+	classpath 'net.nemerosa:versioning:1.5.0'
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'application'
 apply plugin: 'org.flywaydb.flyway'
+apply plugin: 'net.nemerosa.versioning'
 
 repositories {
     jcenter()
@@ -33,7 +35,9 @@ dependencies {
             [group: 'com.offbytwo', name: 'docopt', version: '0.6.0.20150202'],
             [group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'],
             [group: 'org.projectlombok', name: 'lombok', version: '1.16.6'],
-            [group: 'org.apache.commons', name: 'commons-io', version : '1.3.2']
+            [group: 'org.apache.commons', name: 'commons-io', version : '1.3.2'],
+
+	    [group: 'com.jcabi', name: 'jcabi-manifests', version: '1.1']
     )
 
     testCompile(
@@ -51,7 +55,7 @@ sourceSets {
 }
 
 mainClassName = 'headhunt.Main'
-version = '1.0.0'
+version = versioning.info.full
 
 /**
  * Migration
@@ -86,7 +90,15 @@ task fatJar(type: Jar) {
 
     manifest {
         attributes 'Implementation-Title': 'Headhunt application'
-        attributes 'Implementation-Version': '0.0.1'
+        attributes 'Implementation-Version': version
+        attributes 'Main-Class': 'headhunt.Main'
+    }
+}
+
+jar(){ 
+    manifest {
+        attributes 'Implementation-Title': 'Headhunt application'
+        attributes 'Implementation-Version': version
         attributes 'Main-Class': 'headhunt.Main'
     }
 }
