--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ sourceSets {
     }
 }
 
-mainClassName = 'headhunt.Main'
+mainClassName = 'headhunt.app.App'
 version = versioning.info.full
 
 /**
