--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ sourceSets {
 	}
 }
 
-mainClassName = 'headhunt.preloader.PreloaderFx';
+mainClassName = 'headhunt.setup.SetupFx';
 version = versioning.info.full
 
 /**
@@ -92,7 +92,7 @@ task fatJar(type: Jar) {
 		attributes 'Implementation-Title': 'Headhunt'
 		attributes 'Implementation-Version': version
 		attributes 'Implementation-Date': new Date().format('dd.MM.yyyy')
-		attributes 'Main-Class': 'headhunt.preloader.PreloaderFx'
+		attributes 'Main-Class': 'headhunt.Main'
 	}
 }
 
