--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,8 @@ dependencies {
 		[group: 'org.projectlombok', name: 'lombok', version: '1.16.6'],
 		[group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'],
 		[group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.7'],
-		[group: 'com.jcabi', name: 'jcabi-manifests', version: '1.1']
+		[group: 'com.jcabi', name: 'jcabi-manifests', version: '1.1'],
+        [group: 'org.commonjava.googlecode.markdown4j', name: 'markdown4j', version: '2.2-cj-1.0']
 	)
 
 	testCompile(
@@ -54,7 +55,7 @@ sourceSets {
 	}
 }
 
-mainClassName = 'headhunt.setup.SetupFx';
+mainClassName = 'headhunt.app.AppFx';
 version = versioning.info.full
 
 /**
