Adding about module...  Adding show tutorial checkbox in finish window.

--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ sourceSets {
 	}
 }
 
-mainClassName = 'headhunt.app.AppFx';
+mainClassName = 'headhunt.Main';
 version = versioning.info.full
 
 /**
