Cleaning and finishing Main class...  Adding config.properties for the application.  Implementation-Date to Build-date.  Adding all application information data to Main class.  Cleaning resources files.

--- a/build.gradle
+++ b/build.gradle
@@ -90,18 +90,18 @@ task fatJar(type: Jar) {
 	with jar
 
 	manifest {
+		attributes 'Main-Class': 'headhunt.Main'
 		attributes 'Implementation-Title': 'Headhunt'
 		attributes 'Implementation-Version': version
-		attributes 'Implementation-Date': new Date().format('dd.MM.yyyy')
-		attributes 'Main-Class': 'headhunt.Main'
+		attributes 'Build-Date': new Date().format('dd.MM.yyyy')
 	}
 }
 
 jar() {
 	manifest {
+		attributes 'Main-Class': 'headhunt.Main'
 		attributes 'Implementation-Title': 'Headhunt'
 		attributes 'Implementation-Version': version
-		attributes 'Implementation-Date': new Date().format('dd.MM.yyyy')
-		attributes 'Main-Class': 'headhunt.Main'
+		attributes 'Build-Date': new Date().format('dd.MM.yyyy')
 	}
 }
